--- a/TP02/TP2/Views/Shared/_Layout.cshtml
+++ b/TP02/TP2/Views/Shared/_Layout.cshtml
@@ -21,10 +21,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Container" asp-action="Index">Containers</a>
+                            <a class="nav-link text-dark nav-link-hover" asp-area="" asp-controller="BL" asp-action="Index">BLs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="BL" asp-action="Index">BLs</a>
+                            <a class="nav-link text-dark nav-link-hover" asp-area="" asp-controller="Container" asp-action="Index">Containers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark nav-link-hover" asp-area="" asp-controller="Relatorio" asp-action="Index">Relatório</a>
                         </li>
                     </ul>
                 </div>
