--- a/TP02/TP2/Views/BL/Delete.cshtml
+++ b/TP02/TP2/Views/BL/Delete.cshtml
@@ -5,11 +5,11 @@
 }
 
 <h1>@ViewData["Title"]</h1>
+<hr />
 
 <h3>Você tem certeza que deseja deletar este item?</h3>
 <div>
-    <h4>BL</h4>
-    <hr />
+    <h4>Detalhes do BL:</h4>
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Numero)
@@ -33,7 +33,7 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Deletar" class="btn btn-danger" /> |
-        <a asp-action="Index">Voltar para a Lista</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-secondary">Voltar</a>
     </form>
 </div>
