--- a/TP02/TP2/wwwroot/css/site.css
+++ b/TP02/TP2/wwwroot/css/site.css
@@ -29,3 +29,10 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+/* Estilo customizado para o hover do menu */
+.nav-link-hover:hover {
+    background-color: #f8f9fa; /* Cor de fundo cinza claro */
+    border-radius: 0.25rem; /* Cantos arredondados */
+    transition: background-color 0.2s ease-in-out; /* Transição suave */
+}
