--- a/TP-FINAL/PO2/WEB_SITE/Views/Produtos/Criar.cshtml
+++ b/TP-FINAL/PO2/WEB_SITE/Views/Produtos/Criar.cshtml
@@ -41,7 +41,7 @@
 
                     <div class="d-flex justify-content-between mt-4">
                         <a asp-action="Index" class="btn btn-secondary btn-lg">Cancelar</a>
-                        <button type="submit" class="btn btn-success btn-lg">Criar Produto</button>
+                        <button type="submit" class="btn btn-primary btn-lg">Salvar</button>
                     </div>
                 </form>
 
