--- a/TP-FINAL/PO2/WEB_SITE/Views/Produtos/Index.cshtml
+++ b/TP-FINAL/PO2/WEB_SITE/Views/Produtos/Index.cshtml
@@ -12,7 +12,7 @@
             <p class="text-muted mb-0">Acompanhe, edite e cadastre novos produtos do sistema.</p>
         </div>
 
-        <a asp-action="Criar" class="btn btn-success shadow-sm px-4 py-2">
+        <a asp-action="Criar" class="btn btn-primary shadow-sm px-4 py-2">
             Cadastrar Produto
         </a>
     </div>
