--- a/TP-FINAL/PO2/WEB_SITE/Views/Shared/_Layout.cshtml
+++ b/TP-FINAL/PO2/WEB_SITE/Views/Shared/_Layout.cshtml
@@ -1,32 +1,70 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WEB_SITE</title>
+    <title>@ViewData["Title"] - Gerenciamento De Produtos</title>
+    <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/WEB_SITE.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header class="py-3">
-        <div class="container d-flex justify-content-between align-items-center">
-            <a class="logo text-white text-decoration-none" asp-controller="Home" asp-action="Index">Sistema de Produtos</a>
-            <nav class="nav-links">
-                <a asp-controller="Home" asp-action="Index" class="text-white me-3">Início</a>
-                <a asp-controller="Home" asp-action="Creditos" class="text-white">Créditos</a>
-            </nav>
-        </div>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <div class="container-fluid">
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav w-100">
+
+                        <li class="text-dark fs-5">
+                            Sitemas de Gerenciamento de Produtos
+                        </li>
+
+                        @if (Context.Session.GetString("UsuarioNome") != null)
+                        {
+                            <li class="nav-item ms-auto d-flex align-items-center gap-3">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person-fill text-primary" viewBox="0 0 16 16">
+                                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
+                                </svg>
+
+                                <span class="text-primary fw-bold fs-5">
+                                    Olá, @Context.Session.GetString("UsuarioNome")
+                                </span>
+
+                                <a asp-controller="Home" asp-action="Sair" class="btn btn-danger btn-sm">
+                                    Sair
+                                </a>
+
+                            </li>
+                        }
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
+    
+    <div class="container">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
 
-    <main role="main" class="flex-fill">
-        @RenderBody()
-    </main>
-
-    <footer class="border-top footer text-muted">
-        <p>&copy; 2025 - Sistema de Gerenciamento de Produtos | Sistemas WEB 2 - Trabalho Prático Final</p>
-        <p>Desenvolvido por Cesar Beda CB302704X</p>
+    <footer class="border-top mt-auto footer text-muted p-1">
+        <div class="container">
+            &copy; 2025 - Sistema de Gerenciamento de Produtos | Sistemas WEB 2 - Trabalho Prático Final <br/>
+            Desenvolvido por: Cesar Beda CB302704X
+        </div>
     </footer>
-
+    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
