--- a/TP-FINAL/PO2/WEB_SITE/wwwroot/css/site.css
+++ b/TP-FINAL/PO2/WEB_SITE/wwwroot/css/site.css
@@ -21,6 +21,13 @@ body {
     margin-bottom: 60px;
 }
 
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+}
+
 .form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
     color: var(--bs-secondary-color);
     text-align: end;
